--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>iPhone Air</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+
   <style>
     body {
       background-color: black;
@@ -16,12 +17,6 @@
     .transparent-navbar {
       background-color: rgba(48, 47, 47, 0.7);
       backdrop-filter: blur(10px);
-    }
-
-    .styled-img {
-      height: 300px;
-      object-fit: contain;
-      width: 100%;
     }
 
     .nav-link {
@@ -72,6 +67,16 @@
       justify-content: center;
     }
 
+    .card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 0 20px rgba(255, 255, 255, 0.15);
+      transition: all 0.3s ease;
+    }
+
+    .custom-card {
+      background-color: rgba(48, 47, 47, 0.4);
+    }
+
     /* text responsiveness */
     @media (max-width: 1200px) {
 
@@ -95,10 +100,6 @@
       /* carousel image */
       .carousel-img {
         max-height: 300px;
-      }
-
-      .styled-img {
-        max-height: 200px;
       }
 
       #specifications .card img {
@@ -137,7 +138,8 @@
 </head>
 
 <body class="text-white" data-bs-spy="scroll" data-bs-target="#navbarNav" data-bs-offset="100" tabindex="0">
-  <nav class="navbar navbar-expand-sm fixed-top mx-5 mt-3 py-2 px-4 rounded-4 transparent-navbar navbar-dark">
+  <nav
+    class="navbar navbar-expand-sm fixed-top mx-5 mt-3 py-2 px-lg-5 px-md-4 px-sm-3 px-2 rounded-4 transparent-navbar navbar-dark">
     <div class="container-fluid">
       <a class="navbar-brand" style="color:white;">iPhone Air</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -164,7 +166,7 @@
   <section id="overview" class="text-center">
     <div class="container-fluid mb-5">
       <img src="images/air.png" alt="iPhone Air Overview" class="img-fluid">
-      <p class="px-5 text" style="text-align:justify; font-size: 1.2rem">
+      <p class="px-lg-5 px-md-4 px-3 text" style="text-align:justify; font-size: 1.2rem">
         The iPhone Air combines powerful performance with an ultrathin, lightweight titanium design. Its 6.5-inch
         ProMotion display delivers vibrant visuals and smooth responsiveness, protected by the durable Ceramic Shield 2.
         Capture stunning photos and videos with the 48MP main camera and 18MP front camera, both enhanced for creativity
@@ -176,34 +178,13 @@
 
   <!-- Gallery Section -->
   <section id="gallery">
-    <div class="container-fluid text-center px-5">
-      <h2>The thinnest iPhone ever made.</h2>
-      <div class="card bg-transparent text-white mb-4">
-        <div class="card-body">
-          <div class="row align-items-center">
-            <div class="col-lg-6">
-              <p class="mt-3 mt-lg-0 text" style="text-align:justify; font-size: 1.2rem">
-                The iPhone Air’s ultra-thin design makes it incredibly lightweight and comfortable to carry anywhere.
-                Despite its slim build, it delivers impressive performance and a premium feel that enhances everyday
-                use.
-              </p>
-            </div>
-            <div class="col-lg-6 text-center">
-              <img src="images/thin.png" alt="thin" class="img-fluid styled-img">
-            </div>
-          </div>
-        </div>
-      </div>
+    <div class="container-fluid text-center px-lg-5 px-md-4 px-3">
 
-
-
-    </div>
-
-    <div class="container-fluid">
-      <div id="galleryCarousel" class="carousel slide" data-bs-ride="false">
+      <div id="galleryCarousel" class="carousel slide mb-4" data-bs-ride="false">
         <div class="carousel-inner">
 
-          <div class="carousel-item active px-5">
+          <!-- slide 1 -->
+          <div class="carousel-item active px-lg-5 px-md-4 px-sm-3 px-2">
             <div class="row align-items-center">
               <div class="col-7">
                 <img src="images/air1.png" alt="colors" class="carousel-img">
@@ -216,7 +197,8 @@
             </div>
           </div>
 
-          <div class="carousel-item px-5">
+          <!-- slide 2 -->
+          <div class="carousel-item px-lg-5 px-md-4 px-sm-3 px-2">
             <div class="row align-items-center px-1">
               <div class="col-6">
                 <img src="images/white.png" alt="white" class="carousel-img">
@@ -230,7 +212,8 @@
             </div>
           </div>
 
-          <div class="carousel-item px-5">
+          <!-- slide 3 -->
+          <div class="carousel-item px-lg-5 px-md-4 px-sm-3 px-2">
             <div class="row align-items-center px-1">
               <div class="col-6">
                 <img src="images/gold.png" alt="gold" class="carousel-img">
@@ -244,7 +227,8 @@
             </div>
           </div>
 
-          <div class="carousel-item px-5">
+          <!-- slide 4 -->
+          <div class="carousel-item px-lg-5 px-md-4 px-sm-3 px-2">
             <div class="row align-items-center px-1">
               <div class="col-6">
                 <img src="images/blue.png" alt="blue" class="carousel-img">
@@ -258,7 +242,8 @@
             </div>
           </div>
 
-          <div class="carousel-item px-5">
+          <!-- slide 5 -->
+          <div class="carousel-item px-lg-5 px-md-4 px-sm-3 px-2">
             <div class="row align-items-center px-1">
               <div class="col-6">
                 <img src="images/black.png" alt="black" class="carousel-img">
@@ -271,9 +256,9 @@
               </div>
             </div>
           </div>
-
         </div>
 
+        <!-- carousel buttons -->
         <button class="carousel-control-prev" type="button" data-bs-target="#galleryCarousel" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
@@ -283,14 +268,83 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
+      </div>
+
+      <!-- Row 1 -->
+      <div class="row g-4 mb-4 align-items-stretch">
+
+        <!-- Card 1 -->
+        <div class="col-12 col-md-6">
+          <div class="card custom-card text-white border border-secondary h-100">
+            <img src="images/p1.png" class="card-img-top transparent-img p-3" alt="Thin Design">
+            <div class="card-body">
+              <p class="card-title">Ultrathin Titanium Design</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Card 2 -->
+        <div class="col-6 col-md-3">
+          <div class="card custom-card text-white border border-secondary h-100">
+            <img src="images/p2.png" class="card-img-top transparent-img p-3" alt="cam1">
+            <div class="card-body">
+              <p class="card-title">18MP Center Stage front camera.</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Card 3 -->
+        <div class="col-6 col-md-3">
+          <div class="card custom-card text-white border border-secondary h-100">
+            <img src="images/p3.png" class="card-img-top transparent-img p-3" alt="cam2">
+            <div class="card-body">
+              <p class="card-title">48MP Fusion Main camera.</p>
+            </div>
+          </div>
+        </div>
 
       </div>
+
+      <!-- Row 2 -->
+      <div class="row g-4 mb-4 align-items-stretch">
+
+        <!-- Card 1 -->
+        <div class="col-12 col-sm-4">
+          <div class="card custom-card text-white border border-secondary">
+            <img src="images/box.png"class="card-img-top transparent-img p-3" alt="box">
+            <div class="card-body">
+              <p class="card-title">What's in the box?</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Card 2 -->
+        <div class="col-6 col-sm-4">
+          <div class="card custom-card text-white border border-secondary">
+            <img src="images/magsafe.png" class="card-img-top transparent-img p-3" alt="magsafe">
+            <div class="card-body">
+              <p class="card-title">MagSafe Battery</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Card 3 -->
+        <div class="col-6 col-sm-4">
+          <div class="card custom-card text-white border border-secondary">
+            <img src="images/crossbody.png" class="card-img-top transparent-img p-3" alt="crossbody">
+            <div class="card-body">
+              <p class="card-title">Crossbody Strap</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      
     </div>
   </section>
 
   <!-- Specifications Section -->
   <section id="specifications" class="py-5">
-    <div class="container-fluid px-5">
+    <div class="container-fluid px-lg-5 px-md-4 px-3">
       <h2 class="text-center mb-4">Specifications</h2>
       <div class="row row-cols-1 row-cols-md-2 g-4">
 
