--- a/index.html
+++ b/index.html
@@ -153,9 +153,12 @@
 
 <body class="text-white" data-bs-spy="scroll" data-bs-target="#navbarNav" data-bs-offset="100" tabindex="0">
   <nav
-    class="navbar navbar-expand-sm fixed-top mx-5 mt-3 py-2 px-lg-5 px-md-4 px-sm-3 px-2 rounded-4 transparent-navbar navbar-dark">
+    class="navbar navbar-expand-sm fixed-top mx-lg-5 mx-md-4 mx-3 mt-3 py-2 px-lg-5 px-4 rounded-4 transparent-navbar navbar-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" style="color:white;">iPhone Air</a>
+      <a class="navbar-brand d-flex align-items-center gap-2" style="color:white;">
+        <i class="bi bi-apple fs-3"></i>
+        iPhone Air
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -521,27 +524,27 @@
     </a>
   </div>
 
-<!-- Footer -->
-<footer class="text-white py-md-4 py-3" style="background-color: rgba(48, 47, 47, 0.7);">
-  <div class="container">
-    <div class="row align-items-center">
+  <!-- Footer -->
+  <footer class="text-white py-md-4 py-3" style="background-color: rgba(48, 47, 47, 0.7);">
+    <div class="container">
+      <div class="row align-items-center">
 
-      <div class="col-6 text-center text-md-center mb-2 mb-md-0">
-        <p class="mb-0">© 2025 iPhone Air. All rights reserved.</p>
-      </div>
+        <div class="col-6 text-center text-md-center mb-2 mb-md-0">
+          <p class="mb-0">© 2025 iPhone Air. All rights reserved.</p>
+        </div>
 
-      <div class="col-6 text-center text-md-center">
-        <p class="mb-1">Follow Us:</p>
-        <div class="d-flex justify-content-center justify-content-md-center gap-3">
-          <i class="bi bi-facebook"></i>
-          <i class="bi bi-twitter"></i>
-          <i class="bi bi-instagram"></i>
-          <i class="bi bi-youtube"></i>
+        <div class="col-6 text-center text-md-center">
+          <p class="mb-1">Follow Us:</p>
+          <div class="d-flex justify-content-center justify-content-md-center gap-3">
+            <i class="bi bi-facebook"></i>
+            <i class="bi bi-twitter"></i>
+            <i class="bi bi-instagram"></i>
+            <i class="bi bi-youtube"></i>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</footer>
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
