--- a/index.html
+++ b/index.html
@@ -8,147 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-
-  <style>
-    body {
-      background-color: black;
-      padding-top: 50px;
-    }
-
-    .transparent-navbar {
-      background-color: rgba(48, 47, 47, 0.7);
-      backdrop-filter: blur(10px);
-    }
-
-    .nav-link {
-      color: white !important;
-    }
-
-    .nav-link:hover,
-    .nav-link:active {
-      background-color: black;
-    }
-
-    /* carousel button */
-    #galleryCarousel .carousel-control-prev,
-    #galleryCarousel .carousel-control-next {
-      opacity: 0;
-      transition: opacity 0.3s ease;
-    }
-
-    #galleryCarousel:hover .carousel-control-prev,
-    #galleryCarousel:hover .carousel-control-next {
-      opacity: 1;
-    }
-
-    .carousel-img {
-      width: 100%;
-      padding: 15px;
-      object-fit: contain;
-      max-height: 400px;
-    }
-
-    .table-dark {
-      background-color: transparent !important;
-    }
-
-    .table-dark th,
-    .table-dark td {
-      border-color: rgba(255, 255, 255, 0.3) !important;
-    }
-
-    #specifications .card img {
-      width: 80px;
-      height: 80px;
-      object-fit: contain;
-      background-color: white;
-      border-radius: 10px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 0 20px rgba(255, 255, 255, 0.15);
-      transition: all 0.3s ease;
-    }
-
-    .custom-card {
-      background-color: rgba(48, 47, 47, 0.4);
-    }
-
-    .btn-light {
-      background-color: white;
-      color: black;
-      border: none;
-      transition: all 0.3s ease;
-    }
-
-    .btn-light:hover {
-      background-color: #ccc;
-      color: black;
-      transform: scale(1.05);
-    }
-
-    /* text responsiveness */
-    @media (max-width: 1200px) {
-
-      .text,
-      tr {
-        font-size: 1.1rem !important;
-      }
-
-      h2 {
-        font-size: 1.5rem;
-      }
-
-      .card-text {
-        font-size: 0.9rem !important;
-      }
-
-      .card-title {
-        font-size: 1.1rem !important;
-      }
-
-      /* carousel image */
-      .carousel-img {
-        max-height: 300px;
-      }
-
-      #specifications .card img {
-        width: 70px;
-        height: 70px;
-      }
-    }
-
-
-    @media (max-width: 768px) {
-
-      .text,
-      .nav-item,
-      tr {
-        font-size: 0.9rem !important;
-      }
-
-      h2 {
-        font-size: 1.2rem;
-      }
-
-      .card-text {
-        font-size: 0.8rem !important;
-      }
-
-      .card-title {
-        font-size: 1rem !important;
-      }
-
-      #specifications .card img {
-        width: 60px;
-        height: 60px;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body class="text-white" data-bs-spy="scroll" data-bs-target="#navbarNav" data-bs-offset="100" tabindex="0">
